# CudaLab

./: CMakeLists.txt  README.md
include/: common.hpp  pybind.hpp
include/add2/: add2.hpp
include/flash_attn/: flash_attn.hpp
include/prefix_sum/: prefix_sum_baseline.hpp  prefix_sum_v1.hpp  prefix_sum_v2.hpp  prefix_sum_v3.hpp  prefix_sum_v4.hpp
include/reduce/: block_reduce.hpp
include/self_attn/: self_attn.hpp
include/softmax/: softmax.hpp
scripts/: build.bash  clear_and_build.bash  run_all_tests.bash
src/: pybind.cc
src/add2/: add2.cu
src/flash_attn/: flash_attn.cu
src/prefix_sum/: prefix_sum_baseline.cu  prefix_sum_v1.cu  prefix_sum_v2.cu  prefix_sum_v3.cu  prefix_sum_v4.cu
src/reduce/: block_reduce_kernel.cu
src/self_attn/: self_attn_kernel.cu
src/softmax/: softmax_kernel.cu
test/: test_all.py
test/add2/: test_add2.py
test/common/: torch_env.py
test/flash_attn/: test_flash_attn.py
test/prefix_sum/: test_prefix_sum_baseline.py  test_prefix_sum_v1.py  test_prefix_sum_v2.py  test_prefix_sum_v3.py  test_prefix_sum_v4.py
test/reduce/: test_reduce.py
test/self_attn/: test_self_attn.py
test/softmax/: test_softmax.py
